--- a/style.css
+++ b/style.css
@@ -1,97 +1,260 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+	color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+	height: 6em;
+	padding: 1.5em;
+	will-change: filter;
+	transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+	filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+	filter: drop-shadow(0 0 2em #f7df1eaa);
 }
 
 .card {
-  padding: 2em;
+	padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+	color: #888;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	background-color: #1a1a1a;
+	cursor: pointer;
+	transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+	border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+	outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
+	a:hover {
+		color: #747bff;
+	}
+	button {
+		background-color: #f9f9f9;
+	}
+}
+
+.headband {
+	max-height: 2000px;
+	height: 100%;
+	width: 100%;
+	background: #32569d;
+	z-index: 10;
+	height: 600px;
+	position: absolute;
+	overflow: hidden;
+}
+.anime {
+	height: 600px;
+	width: 100%;
+}
+.bg_cloud {
+	background: #32569d;
+	height: 203px;
+	margin-top: -203px;
+}
+@keyframes cloud_1 {
+	from {
+		background-position: 1369px 100%, 0 0;
+	}
+	to {
+		background-position: 0 100%, 0 0;
+	}
+}
+@keyframes cloud_2 {
+	from {
+		background-position: 2060px 100%, 0 0;
+	}
+	to {
+		background-position: 0 100%, 0 0;
+	}
+}
+@keyframes raduga {
+	from {
+		background-position: 1000px 100%, 120% 30%, 120% 15%, 0 0;
+	}
+	to {
+		background-position: 0 100%, -200% 10%, -50% 15%, 0 0;
+	}
+	50% {
+		margin-top: 30px;
+	}
+}
+@keyframes finn {
+	50% {
+		margin-top: 30px;
+		/*height: 158px;*/
+	}
+}
+@keyframes star {
+	from {
+		background-position: 457px 100%, 0 0;
+	}
+	to {
+		background-position: 0 100%, 0 0;
+	}
+}
+.cloud_1 {
+	z-index: 200;
+	bottom: 0px;
+	margin-top: 0px;
+	position: absolute;
+	width: 100%;
+	height: 188px;
+	background: url('../img/obl_2.png') repeat-x;
+
+	animation: cloud_2 25s linear infinite;
+}
+
+.raduga {
+	margin-top: 0px;
+	position: absolute;
+	top: 100px;
+	left: -500px;
+	z-index: 5;
+	height: 108px;
+	width: 1500px;
+	background: url('../img/raduga.png') repeat-x;
+
+	animation: raduga 3s linear infinite;
+}
+.cloud_2 {
+	z-index: 100;
+	bottom: 0px;
+	margin-top: 0px;
+	position: absolute;
+	width: 100%;
+	height: 205px;
+	background: url('../img/cloud2.png') repeat-x;
+
+	animation: cloud_1 45s linear infinite;
+}
+
+.center_main {
+	top: 50%;
+	margin-top: -100px;
+	position: absolute;
+	width: 100%;
+	text-align: Center;
+	color: #fff;
+}
+.finn {
+	position: absolute;
+	left: 840px;
+	top: 59px;
+	z-index: 202;
+	width: 276px;
+	height: 155px;
+	background: url('../img/finn_t.png') no-repeat;
+	background-size: contain;
+	/*transform: scale(1, -1);*/
+
+	animation: finn 3s linear infinite;
+}
+.particule {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 4rem;
+	height: 4rem;
+	margin: -0.5rem 0 0 -0.5rem;
+	transform: scale(0);
+	border-radius: 100%;
+	background-image: url('https://cdn140.picsart.com/233951046063212.png?r1024x1024');
+	background-size: cover;
+	z-index: 100000;
+}
+.star {
+	z-index: 200;
+	top: 10px;
+	margin-top: 0px;
+	position: absolute;
+	width: 100%;
+	height: 267px;
+	background: url('../img/stars.png') repeat-x;
+
+	animation: star 10s linear infinite;
+}
+#line {
+	top: 50%;
+	margin-left: -150px;
+	width: 300px;
+	margin-top: 10px;
+	height: 3px;
+	background: #99ffc9;
+	text-align: Center;
+	vertical-align: middle;
+}
+.line_h {
+	border: none; /* Убираем границу */
+	background-color: #98e051; /* Цвет линии */ /* Цвет линии для IE6-7 */
+	height: 4px; /* Толщина линии */
+	align: center;
+	width: 300px;
+}
+.imag_day img {
+	width: 100%;
+	border-radius: 6px;
 }
