--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: #fff;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -36,7 +36,6 @@ h1 {
 	line-height: 1.1;
 }
 
-
 .card {
 	padding: 2em;
 }
@@ -63,7 +62,6 @@ button:focus,
 button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
 }
-
 
 .headband {
 	max-height: 2000px;
@@ -111,7 +109,7 @@ button:focus-visible {
 		margin-top: 30px;
 	}
 }
-@keyframes finn {
+@keyframes cat {
 	50% {
 		margin-top: 30px;
 		/*height: 158px;*/
@@ -132,7 +130,7 @@ button:focus-visible {
 	position: absolute;
 	width: 100%;
 	height: 188px;
-	background: url('../img/obl_2.png') repeat-x;
+	background: url('/obl_2.png') repeat-x;
 
 	animation: cloud_2 25s linear infinite;
 }
@@ -141,11 +139,11 @@ button:focus-visible {
 	margin-top: 0px;
 	position: absolute;
 	top: 100px;
-	left: -500px;
+	left: -1200px;
 	z-index: 5;
 	height: 108px;
 	width: 1500px;
-	background: url('../img/raduga.png') repeat-x;
+	background: url('/raduga.png') repeat-x;
 
 	animation: raduga 3s linear infinite;
 }
@@ -156,7 +154,7 @@ button:focus-visible {
 	position: absolute;
 	width: 100%;
 	height: 205px;
-	background: url('../img/cloud2.png') repeat-x;
+	background: url('/cloud2.png') repeat-x;
 
 	animation: cloud_1 45s linear infinite;
 }
@@ -169,18 +167,18 @@ button:focus-visible {
 	text-align: Center;
 	color: #fff;
 }
-.finn {
+.cat {
 	position: absolute;
-	left: 840px;
+	left: 170px;
 	top: 59px;
-	z-index: 202;
+	z-index: 120;
 	width: 276px;
-	height: 155px;
-	background: url('../img/finn_t.png') no-repeat;
+	height: 205px;
+	background: url('/cat.png') no-repeat;
 	background-size: contain;
 	/*transform: scale(1, -1);*/
 
-	animation: finn 3s linear infinite;
+	animation: cat 3s linear infinite;
 }
 .particule {
 	position: absolute;
@@ -196,13 +194,13 @@ button:focus-visible {
 	z-index: 100000;
 }
 .star {
-	z-index: 200;
+	z-index: 100;
 	top: 10px;
 	margin-top: 0px;
 	position: absolute;
 	width: 100%;
 	height: 267px;
-	background: url('../img/stars.png') repeat-x;
+	background: url('/stars.png') repeat-x;
 
 	animation: star 10s linear infinite;
 }
@@ -226,4 +224,41 @@ button:focus-visible {
 .imag_day img {
 	width: 100%;
 	border-radius: 6px;
+}
+
+kbd {
+	background-color: #fff;
+	border: 1px solid #ccd0d5;
+	border-radius: 0.4rem;
+	box-shadow: inset 0 -1px 0 #ccd0d5;
+	color: #444950;
+	font: 2rem monospace;
+	padding: 1.2rem 1rem;
+}
+.DocSearch-Button-Key {
+	transition: all 1s;
+	align-items: center;
+	background: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
+	border: 0;
+	/* border-radius: 3px; */
+	box-shadow: inset 0 -6px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
+		0 1px 2px 1px rgba(30, 35, 90, 0.4);
+	color: #606770;
+	display: flex;
+	height: 18px;
+	justify-content: center;
+	margin: 0.4em;
+	position: relative;
+	top: -1px;
+	/* width: 80px; */
+}
+
+.DocSearch-Button-Key-pressed {
+	box-shadow: inset 0 2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
+		0 1px 2px 1px rgba(30, 35, 90, 0.4);
+}
+
+.DocSearch-Button-Key:hover {
+	box-shadow: inset 0 2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
+		0 1px 2px 1px rgba(30, 35, 90, 0.4);
 }
