--- a/style.css
+++ b/style.css
@@ -25,8 +25,6 @@ a:hover {
 
 body {
 	margin: 0;
-	display: flex;
-	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
 }
@@ -235,6 +233,12 @@ kbd {
 	font: 2rem monospace;
 	padding: 1.2rem 1rem;
 }
+.DocSearch-Button-Keys {
+	display: flex;
+	min-width: calc(40px + 0.8em);
+	flex-wrap: wrap;
+	justify-content: center;
+}
 .DocSearch-Button-Key {
 	transition: all 1s;
 	align-items: center;
@@ -261,4 +265,9 @@ kbd {
 .DocSearch-Button-Key:hover {
 	box-shadow: inset 0 2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
 		0 1px 2px 1px rgba(30, 35, 90, 0.4);
+}
+
+.hud-panel {
+	display: flex;
+	width: 100%;
 }
