--- a/style.css
+++ b/style.css
@@ -80,6 +80,23 @@ button:focus-visible {
 	height: 203px;
 	margin-top: -203px;
 }
+
+.animScale {
+	animation: animScale 2s ease-in-out infinite;
+}
+
+@keyframes animScale {
+	0% {
+		transform: scale(0.9);
+	}
+	50% {
+		transform: scale(1.1);
+	}
+	100% {
+		transform: scale(0.9);
+	}
+}
+
 @keyframes cloud_1 {
 	from {
 		background-position: 1369px 100%, 0 0;
@@ -165,6 +182,7 @@ button:focus-visible {
 	text-align: Center;
 	color: #fff;
 }
+
 .cat {
 	position: absolute;
 	left: 170px;
@@ -233,13 +251,13 @@ kbd {
 	font: 2rem monospace;
 	padding: 1.2rem 1rem;
 }
-.DocSearch-Button-Keys {
+.buttons {
 	display: flex;
 	min-width: calc(40px + 0.8em);
 	flex-wrap: wrap;
 	justify-content: center;
 }
-.DocSearch-Button-Key {
+.button {
 	transition: all 1s;
 	align-items: center;
 	background: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
@@ -257,12 +275,12 @@ kbd {
 	/* width: 80px; */
 }
 
-.DocSearch-Button-Key-pressed {
+.button-pressed {
 	box-shadow: inset 0 2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
 		0 1px 2px 1px rgba(30, 35, 90, 0.4);
 }
 
-.DocSearch-Button-Key:hover {
+.button:hover {
 	box-shadow: inset 0 2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
 		0 1px 2px 1px rgba(30, 35, 90, 0.4);
 }
