--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ button:focus-visible {
 	position: absolute;
 	width: 100%;
 	height: 188px;
-	background: url('obl_2.png') repeat-x;
+	background: url('/obl_2.png') repeat-x;
 
 	animation: cloud_2 25s linear infinite;
 }
@@ -158,7 +158,7 @@ button:focus-visible {
 	z-index: 5;
 	height: 108px;
 	width: 1500px;
-	background: url('raduga.png') repeat-x;
+	background: url('/raduga.png') repeat-x;
 
 	animation: raduga 3s linear infinite;
 }
@@ -169,7 +169,7 @@ button:focus-visible {
 	position: absolute;
 	width: 100%;
 	height: 205px;
-	background: url('cloud2.png') repeat-x;
+	background: url('/cloud2.png') repeat-x;
 
 	animation: cloud_1 45s linear infinite;
 }
@@ -190,7 +190,7 @@ button:focus-visible {
 	z-index: 120;
 	width: 276px;
 	height: 205px;
-	background: url('cat.png') no-repeat;
+	background: url('/cat.png') no-repeat;
 	background-size: contain;
 	/*transform: scale(1, -1);*/
 
@@ -216,7 +216,7 @@ button:focus-visible {
 	position: absolute;
 	width: 100%;
 	height: 267px;
-	background: url('stars.png') repeat-x;
+	background: url('/stars.png') repeat-x;
 
 	animation: star 10s linear infinite;
 }
